--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,12 @@ name: ecommerce_app
 description: Flutter eCommerce app (part of the Complete Flutter Course Bundle)
 
 # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.2 <4.0.0"
 
 dependencies:
   flutter:
@@ -15,10 +15,14 @@ dependencies:
   flutter_launcher_icons: 0.10.0
   flutter_localizations:
     sdk: flutter
-  intl: 0.18.0
+  intl: 0.18.1
   flutter_layout_grid: 2.0.1
   flutter_rating_bar: 4.0.1
-  go_router: 5.0.1
+  go_router: ^11.1.2
+  flutter_web_plugins:
+    sdk: flutter
+  flutter_riverpod: ^2.4.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
